--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,3 +23,23 @@ body{
     border-radius: 10px;
     box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.5);
 }
+.relogio div{
+    height: 170px;
+    width: 150px;
+    display: flex;
+    align-items: center;
+    color: #6100fd;
+    justify-content: center;
+    flex-direction: column;
+    background: rgba(5, 5, 5, .9) ;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.7);
+    border-radius: 7px;
+    letter-spacing: 3px;
+}
+.relogio span{
+    font-weight: bolder;
+    font-size: 60px;
+}
+.relogio span.tempo{
+    font-size: 10px;
+}
