--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,11 +4,12 @@
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    overflow: hidden;
 
 }
-body{
+.main{
     background-color: #ffee00;
-    height: 100vh;
+    height: 97vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -42,4 +43,20 @@ body{
 }
 .relogio span.tempo{
     font-size: 10px;
+}
+header{
+    position: absolute;
+    padding: 10px;
+}
+header img{
+    border-radius: 50%;
+    width: 150px;
+}
+
+.footer{
+    padding: 5px;
+    text-align: center;
+    font-weight: bold;
+    background-color: #ffee00;
+    color: #6100fd;
 }
